--- a/packages/creation-ui-react/src/components/date-picker/date-picker.module.css
+++ b/packages/creation-ui-react/src/components/date-picker/date-picker.module.css
@@ -1,4 +1,3 @@
-
 /* REACT DATE PICKER */
 .react-datepicker {
   @apply select-none cursor-default;
@@ -13,11 +12,11 @@
 }
 
 .react-datepicker-left {
-  @apply absolute left-0 right-auto top-11 transform-none; //!important;
+  @apply absolute left-0 right-auto top-11 transform-none !important;
 }
 
 .react-datepicker-right {
-  @apply absolute right-0 left-auto top-11 transform-none; //!important;
+  @apply absolute right-0 left-auto top-11 transform-none !important;
 }
 
 .react-datepicker__portal {
