--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
 .react-datepicker {
-  @apply select-none cursor-default;
+  @apply cursor-default select-none;
 }
 
 .react-datepicker__input-container input {
-  @apply block w-full text-base md: text-sm bg-white border border-gray-300 rounded shadow-sm form-input;
+  @apply md:form-input block w-full rounded border border-gray-300 bg-white text-base text-sm shadow-sm;
 }
 
 .react-datepicker-popper {
-  @apply z-40 w-72 text-sm bg-white shadow px-3 py-2 border-2 border-gray-200 rounded;
+  @apply z-40 w-72 rounded border-2 border-gray-200 bg-white px-3 py-2 text-sm shadow;
 }
 
 .react-datepicker-left {
@@ -19,7 +19,7 @@
 }
 
 .react-datepicker__portal {
-  @apply absolute z-10 w-72 text-sm transform-none bg-white shadow px-3 py-2 top-12 right-0 border-2 border-gray-200 rounded;
+  @apply absolute top-12 right-0 z-10 w-72 transform-none rounded border-2 border-gray-200 bg-white px-3 py-2 text-sm shadow;
 }
 
 .react-datepicker__month-container {
@@ -39,11 +39,11 @@
 }
 
 .react-datepicker__day-names {
-  @apply flex justify-around text-gray-400 font-medium text-center text-xs;
+  @apply flex justify-around text-center text-xs font-medium text-gray-400;
 }
 
 .react-datepicker__day-name {
-  @apply w-8 h-8 flex items-center justify-center py-1 rounded-full;
+  @apply flex h-8 w-8 items-center justify-center rounded-full py-1;
 }
 
 .react-datepicker__navigation {
@@ -51,19 +51,19 @@
 }
 
 .react-datepicker__navigation--previous {
-  @apply right-12 w-8 h-8 rounded transition flex items-center justify-center hover: bg-gray-200;
+  @apply right-12 flex h-8 w-8 items-center justify-center rounded transition hover:bg-gray-200;
 }
 
 .react-datepicker__navigation--next {
-  @apply right-4 w-8 h-8 rounded transition flex items-center justify-center hover: bg-gray-200;
+  @apply right-4 flex h-8 w-8 items-center justify-center rounded transition hover:bg-gray-200;
 }
 
 .react-datepicker__day {
-  @apply mb-1 w-8 h-8 flex items-center justify-center py-1 text-sm leading-loose transition text-gray-700 rounded cursor-pointer;
+  @apply mb-1 flex h-8 w-8 cursor-pointer items-center justify-center rounded py-1 text-sm leading-loose text-gray-700 transition;
 }
 
 .react-datepicker__day--disabled {
-  @apply cursor-not-allowed opacity-40 hover: bg-transparent;
+  @apply cursor-not-allowed opacity-40 hover:bg-transparent;
 }
 
 .react-datepicker__day--outside-month {
@@ -79,11 +79,11 @@
 }
 
 .react-datepicker__day--selecting-range-start {
-  @apply bg-white border-2 border-primary-500;
+  @apply border-primary-500 border-2 bg-white;
 }
 
 .react-datepicker__day--selecting-range-end {
-  @apply bg-white border-2 border-primary-500;
+  @apply border-primary-500 border-2 bg-white;
 }
 
 .react-datepicker__day--selected {
@@ -91,13 +91,13 @@
 }
 
 .react-datepicker__day--range-start {
-  @apply bg-primary-500 text-white hover: text-gray-700 hover:bg-white;
+  @apply bg-primary-500 text-white hover:bg-white hover:text-gray-700;
 }
 
 .react-datepicker__day--range-end {
-  @apply bg-primary-500 text-white hover: text-gray-700 hover:bg-white;
+  @apply bg-primary-500 text-white hover:bg-white hover:text-gray-700;
 }
 
 .react-datepicker__close-icon {
-  @apply absolute top-2 right-2 w-6 h-6 text-gray-400 hover: text-gray-600 text-sm;
+  @apply absolute top-2 right-2 h-6 w-6 text-sm text-gray-400 hover:text-gray-600;
 }
