--- a/packages/creation-ui-react/src/index.css
+++ b/packages/creation-ui-react/src/index.css
@@ -28,7 +28,7 @@
 .react-datepicker__input-container input {
   @apply rounded-md
   border
-  border-zinc-400
+  border-info-400
   bg-white
   invalid:border-error-500
   invalid:ring-error-200
@@ -39,8 +39,8 @@
   focus:ring-offset-0
   focus:invalid:border-error-500
   focus:invalid:ring-error-200
-  dark:border-zinc-400
-  dark:bg-zinc-900
+  dark:border-info-400
+  dark:bg-info-900
   dark:invalid:border-error-400
   dark:invalid:ring-error-200
   focus:dark:border-primary-400
