feat: handle native select

--- a/packages/creation-ui-react/src/index.css
+++ b/packages/creation-ui-react/src/index.css
@@ -41,3 +41,9 @@
   @apply rounded-md;
   border: none;
 }
+
+.reset-select select {
+  appearance: none !important;
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+}
