fix: add remove-ring class for select, handle padding when both clearable and endAndornment are provided to input

--- a/packages/creation-ui-react/src/index.css
+++ b/packages/creation-ui-react/src/index.css
@@ -47,3 +47,7 @@
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
 }
+
+.remove-ring[tabindex]:not([tabindex='-1']):focus-visible {
+  box-shadow: none !important;
+}
